# VoiceLab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: wiki.yml
docs/: WIKI_SYNC.md  index.md
docs/datasets/: list_annotations.md
docs/workflows/cosyvoice/: cosyvoice_dream_sft_wsl_ubuntu2404.md  cosyvoice_xingtong_sft_wsl_ubuntu2404.md  cosyvoice_xuan_sft_wsl_ubuntu2404.md
docs/workflows/gpt_sovits/: gpt_sovits_prepare_train_wsl_ubuntu2404.md
docs/workflows/rvc/: rvc_xingtong_wsl_ubuntu2404.md  rvc_xuan_wsl_ubuntu2404.md
scripts/: generate_gpt_sovits_list.py  rewrite_gpt_sovits_list_paths.py  sync_rvc_training_to_windows.sh  sync_to_windows.sh  wiki_export.sh
tests/: test_dataset_stage.py  test_list_annotations.py  test_rvc_init_runtime.py  test_voicelab_bootstrap.py
voicelab/: __main__.py  bootstrap.py  dataset_stage.py  list_annotations.py
workflows/cosyvoice/: README.md  pyproject.toml  uv.toml
workflows/cosyvoice/configs/: cosyvoice3_xingtong_sft_flow.yaml  (+2 more)
workflows/gpt_sovits/: README.md  pyproject.toml
workflows/msst/: .gitignore  README.md  pyproject.toml  uv.toml
workflows/msst/configs/: config_karaoke_becruily.yaml
workflows/msst/tests/: test_configs_defaults.py  test_download_dest_layout.py  test_expected_filenames.py  test_integration_chain.py
workflows/msst/tools/: msst_download_models.py  msst_init_runtime.py  msst_process_chain.py  voicelab_bootstrap.py
workflows/rvc/: README.md  pyproject.toml  uv.toml
workflows/rvc/docs/: rvc_xingtong_wsl_ubuntu2404.md  rvc_xuan_wsl_ubuntu2404.md
workflows/rvc/tools/: rvc_export_latest_weights.py  rvc_infer_dir.py  rvc_infer_one.py  rvc_infer_taifeng_to_xuan.py  rvc_init_runtime.py  rvc_stage_dataset.py  rvc_train.py  rvc_train_index.py  voicelab_bootstrap.py
(+28 files in other folders)
