[project]
name = "voicelab-rvc"
version = "0.1.0"
description = "VoiceLab workflow: RVC (xingtong train + xuan infer)"
requires-python = ">=3.10,<3.11"
dependencies = [
  # Core
  "torch==2.4.0",
  "torchaudio==2.4.0",
  "torchvision==0.19.0",
  # Audio + DSP
  "numpy==1.23.5",
  "scipy==1.13.1",
  "soundfile>=0.12.1",
  "ffmpeg-python>=0.2.0",
  "av>=12.3.0",
  "librosa==0.9.1",
  "numba==0.56.4",
  "llvmlite==0.39.0",
  # RVC feature/f0/index pipeline
  "fairseq==0.12.2",
  "faiss-cpu==1.7.3",
  "scikit-learn>=1.5.1",
  "pyworld==0.3.2",
  "praat-parselmouth>=0.4.2",
  # Misc
  "python-dotenv>=1.0.0",
  "tensorboard>=2.14.0",
  "matplotlib==3.7.5",
  # librosa==0.9.1 (and some upstream code) imports pkg_resources; newer setuptools removed it.
  "setuptools==69.5.1",
  "wheel>=0.46.3",
  "packaging>=26.0",
]

[tool.uv]
package = false
